--- a/src/app/components/raise-dataset/form1/raise-dataset-form-1.component.scss
+++ b/src/app/components/raise-dataset/form1/raise-dataset-form-1.component.scss
@@ -29,3 +29,8 @@
 .date_input {
   cursor: not-allowed;
 }
+
+input[readonly]
+{
+  color: var(--mdc-filled-text-field-disabled-label-text-color) !important;
+}
