--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -1,6 +1,9 @@
 <div *transloco="let t; prefix: 'register'">
   <mat-card class="form-card">
-    <mat-card-header>
+    <mat-card-header *ngIf="this.isUserSettings">
+      <mat-card-title>{{ t('settings') }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-header *ngIf="!this.isUserSettings">
       <mat-card-title>{{ t('signUp') }}</mat-card-title>
     </mat-card-header>
     <div *ngIf="this.form && !this.isUserCreated">
