Add user-missions component

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -17,7 +17,9 @@
         </a>
       }
     </mat-nav-list>
+    <
     <div class="sidenav__user-section">
+      <app-user-missions></app-user-missions>
       <user-section class="sidenav__user-section-inner"></user-section>
     </div>
   </mat-sidenav>
