--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -17,10 +17,9 @@
         </a>
       }
     </mat-nav-list>
-    <
-    <div class="sidenav__user-section">
-      <app-user-missions></app-user-missions>
-      <user-section class="sidenav__user-section-inner"></user-section>
+    <div class="sidenav__user">
+      <div class="sidenav__user-missions"><app-user-missions></app-user-missions></div>
+      <div><user-section class="sidenav__user-section-inner"></user-section></div>
     </div>
   </mat-sidenav>
 
