--- a/src/app/components/user-missions/user-missions.component.html
+++ b/src/app/components/user-missions/user-missions.component.html
@@ -1,6 +1,6 @@
 <div *transloco="let t; prefix: 'userSection'" class="user-section">
   <button (click)="this.doUserMissions()"
-          class="user-missions__button cursor-pointer">
+          class="user-missions__button cursor-pointer background-transparent">
     <mat-icon svgIcon="social_leaderboard"></mat-icon>
   </button>
 </div>
