--- a/src/app/components/user-missions/user-missions.component.html
+++ b/src/app/components/user-missions/user-missions.component.html
@@ -1,4 +1,8 @@
 <div *transloco="let t; prefix: 'userSection'" class="user-section">
+  <button (click)="this.doUserRaise()"
+          class="user-missions__button cursor-pointer background-transparent">
+    <mat-icon svgIcon="volunteer_activism"></mat-icon>
+  </button>
   <button (click)="this.doUserMissions()"
           class="user-missions__button cursor-pointer background-transparent">
     <mat-icon svgIcon="social_leaderboard"></mat-icon>
