--- a/src/app/components/raise-actions/raise-actions.component.html
+++ b/src/app/components/raise-actions/raise-actions.component.html
@@ -13,7 +13,7 @@
                         Next action date: <span>{{raiseInstance.nextActionDate | date}}</span>
                     </mat-card-content>
                     <mat-card-actions>
-                        <button mat-button>{{ t('raise') }}</button>
+                      <button (click)="this.doRaiseAction(raiseInstance)" mat-button>{{ t('raise') }}</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
@@ -32,7 +32,7 @@
                         Next action date: <span>{{raiseInstance.nextActionDate | date}}</span>
                     </mat-card-content>
                     <mat-card-actions>
-                        <button mat-button>{{ t('raise') }}</button>
+                      <button (click)="this.doRaiseAction(raiseInstance)" mat-button>{{ t('raise') }}</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
@@ -48,7 +48,7 @@
                         <mat-card-subtitle>{{raiseInstance.repositoryName}}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-actions>
-                        <button mat-button>{{ t('raise') }}</button>
+                      <button (click)="this.doRaiseAction(raiseInstance)" mat-button>{{ t('raise') }}</button>
                     </mat-card-actions>
                 </mat-card>
             </div>
