--- a/src/app/components/admin/admin-users/admin-users.component.html
+++ b/src/app/components/admin/admin-users/admin-users.component.html
@@ -1,18 +1,18 @@
-<div *transloco="let t; prefix: 'register'">
+<div *transloco="let t; prefix: 'userAdmin'">
     <div>
-        <p>Click on one user to see his profile</p>
+      <p>{{ t('click_to_view_profile') }}</p>
     </div>
     <app-generic-table (clickOnRowEventHandler)="this.rowHandlerEvent($event)"
-                       *ngIf="this.rows"
+                       *ngIf="this.resourcesRows?.resources"
                        [columns]="this.columns"
-                       [rows]="this.rows"
+                       [rows]="this.resourcesRows?.resources"
     ></app-generic-table>
     <div>
         <div *ngIf="this.form && this.selectedUser">
             <mat-card class="dashboard-card">
                 <mat-card-header>
                     <mat-card-title>
-                        Pepito el de los palotes
+                      {{ this.form.controls['username'].value }}
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content class="dashboard-card-content">
@@ -21,7 +21,7 @@
                             <div class="col">
                                 <mat-form-field class="full-width">
                                     <input formControlName="username" matInput placeholder="{{ t('username') }}">
-                                    @if (form.controls && this.form.controls['username'].hasError('required')) {
+                                  @if (!(form) || form.controls && this.form.controls['username'].hasError('required')) {
                                     <mat-error>{{ t('usernameRequired') }} <strong>{{ t('required') }}</strong></mat-error>
                                     }
                                 </mat-form-field>
@@ -29,7 +29,7 @@
                             <div class="col">
                                 <mat-form-field class="full-width">
                                     <input formControlName="email" matInput placeholder="{{ t('email') }}">
-                                    @if (form.controls && this.form.controls['email'].hasError('required')) {
+                                  @if (!(form) || form.controls && this.form.controls['email'].hasError('required')) {
                                     <mat-error>{{ t('emailRequired') }} <strong>{{ t('required') }}</strong></mat-error>
                                     } @else if (form.controls && this.form.controls['email'].hasError('email')) {
                                     <mat-error>{{ t('wrong') }} <strong>{{ t('eMailFormat') }}</strong></mat-error>
@@ -37,12 +37,45 @@
                                 </mat-form-field>
                             </div>
                         </div>
+                      <div class="row">
+                        <div class="col">
+                          <h5>{{ t('danger_zone_title') }}</h5>
+                          <p>
+                            <mat-slide-toggle formControlName="isBanned">{{ t('ban_user_toggle') }}</mat-slide-toggle>
+                          </p>
+                          <p>
+                            <mat-error *ngIf="this.form.get('isBanned')?.value">
+                              <strong>{{ t('warning') }}</strong>: {{ t('ban_user_warning') }}
+                            </mat-error>
+                          </p>
+                          <p *ngIf="!this.form.get('isBanned')?.value">
+                            <mat-slide-toggle formControlName="isAdmin">{{ t('promote_to_admin_toggle') }}
+                            </mat-slide-toggle>
+                          </p>
+                          <p>
+                            <mat-error *ngIf="this.form.get('isAdmin')?.value && !this.form.get('isBanned')?.value">
+                              <strong>{{ t('warning') }}</strong>: {{ t('promote_to_admin_2') }} {{ this.form.get('username')?.value }} {{ t('promote_to_admin_3') }}
+                              .
+                            </mat-error>
+                          </p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col justify-content-end">
+                          <button (click)="this.handleDeleteAccount()" class="btn-danger"
+                                  mat-flat-button>{{ t('delete_account') }}
+                          </button>
+                        </div>
+                      </div>
                     </form>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button  mat-button>{{ t('ban') }}</button>
-                    <button  mat-button>{{ t('make_admin') }}</button>
-                    <button  mat-button>{{ t('delete_account') }}</button>
+                  <div class="row">
+                    <div class="col justify-content-end">
+                      <button (click)="onSubmit()" *transloco="let t; prefix: 'admin'" mat-button>{{ t('save') }}
+                      </button>
+                    </div>
+                  </div>
                 </mat-card-actions>
             </mat-card>
         </div>
