--- a/src/app/components/generic-table/generic-table.component.html
+++ b/src/app/components/generic-table/generic-table.component.html
@@ -7,7 +7,7 @@
 
     <table #table *ngIf="this.displayedColumns" aria-label="datasets" class="full-width-table" mat-table matSort>
 
-      <ng-container *ngFor="let column of this.columns;">
+      <ng-container *ngFor="let column of this.columns">
         <ng-container [matColumnDef]="column.nameDef">
           <th *matHeaderCellDef mat-header-cell mat-sort-header
               sortActionDescription="{{ t(column.i18nKey) }}">{{ t(column.i18nKey) }}
@@ -17,7 +17,7 @@
       </ng-container>
 
       <tr *matHeaderRowDef="this.displayedColumns" mat-header-row></tr>
-      <tr (click)="this.handleClickOnRow(row)" *matRowDef="let row; columns: this.displayedColumns;"
+      <tr (click)="this.handleClickOnRow(row, i)" *matRowDef="let row; columns: this.displayedColumns; let i = index"
           class="cursor-pointer"
           mat-row></tr>
     </table>
