--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -34,7 +34,7 @@
                                  (change)="this.doChangePassword($event)"
                                  [ngModelOptions]="{standalone: true}">{{ t('changeMyPassword') }}</mat-slide-toggle></p>
           </div>
-          <div *ngIf="this.isUserSettings && this.isChangePassword" class="row">
+          <div *ngIf="this.isUserSettings" class="row">
             <div class="col">
               <mat-form-field class="full-width">
                 <input formControlName="currentPassword" matInput placeholder="{{ t('currentPassword') }}"
